--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,6 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
 server.port=8888
